--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -20,3 +20,5 @@ deviceName=${crowdar.deviceName}
 os.version=${crowdar.os.version}
 crowdar.driverHub=${crowdar.driverHub}
 crowdar.projectType.remoteDriverType=${crowdar.remoteDriverType}
+email=${clockify.email}
+password=${clockify.password}
